src/app/components/popup-window/popup-window.component.scss
/* ... */
:host /deep/ blockquote{
  @include container-size(70%);
  border-left:2px solid gray;
  margin-top: 45px;
  margin-bottom: 25px;
  padding-left: 15px;
  line-height: 1.3;
}

:host /deep/ .content-container{
  video{
    width: 100% !important;
    height: auto !important;
  }
  .description{
    img{
      width: 100%;
      height: auto;
      margin: 10px 0;
    }
    a{
      text-decoration: none;
      color: $color-link-secondary;
      &:hover{
        color: $color-link-secondary-hover;
      }
    }
  }
}

// Extra small devices (portrait phones, less than 576px)
@include media-breakpoint-only(xs) {
  .container{
    .background_layer{
      background-color: rgb(239, 239, 239);
    }
    #popup-window {
      width: 100%;
      margin-left: 0 !important;
      font-size: 1em;
      border-radius: 0;
      margin-bottom: 0;
      margin-top: 0;
      .layouts-container {
        margin-top: 0px !important;
        border-radius: 0px !important;
        .default-layout{
          .header-image{
            min-height: 200px;
            max-height: 210px;
          }
          .content-container{
            width: 100%;
            border-radius: 0;
            padding: 20px 15px;
          }
        }
        .exit-popup-btn {
          display: none;
        }
        .event-layout {
          .header-image {
            min-height: 200px;
            max-height: 210px;
            .default-header {
              height: 200px;
            }
          }
          .content-container {
            width: 90%;
            padding: 30px 20px;
            text-align: center;
            .description{
              width: 90%;
              text-align: left;
              margin-left: 0;
              margin-top: 10px;
            }
            .date{
              width: 100%;
            }
          }
        }
        .association-layout{
          .header-image{
            min-height: 200px;
            max-height: 200px;
          }
          .content-container{
            padding: 20px;
            .description, .contact{
              margin-left: 0;
            }
            .description{
              padding-right: 10px;
              padding-left: 10px;
            }
            .contact{
              width: 38%;
              padding: 10px;
            }
          }
        }
      }
    }
  }
  .exit-popup-btn-mobile{
    display: block;
    padding: 15px 25px;
  }
}

// Small devices (landscape phones, 576px and up)
@include media-breakpoint-only(sm) {
  .container{
    .background_layer{
      background-color: rgb(239, 239, 239);
    }
    #popup-window {
      width: 100%;
      margin-left: 0 !important;
      font-size: 1em;
      border-radius: 0;
      margin-bottom: 0;
      margin-top: 0;
      .layouts-container {
        margin-top: 0px !important;
        border-radius: 0px !important;
        .default-layout{
          .header-image{
            min-height: 250px;
            max-height: 250px;
          }
          .content-container{
            width: 100%;
            border-radius: 0;
            padding: 30px 20px;
          }
        }
        .exit-popup-btn {
          display: none;
        }
        .event-layout {
          .header-image {
            min-height: 250px;
            max-height: 250px;
            .default-header {
              height: 200px;
            }
          }
          .content-container {
            width: 90%;
            padding: 20px 15px;
            text-align: center;
            .description{
              width: 90%;
              text-align: left;
              margin-left: 0;
              margin-top: 10px;
            }
            .date{
              width: 100%;
            }
          }
        }
        .association-layout{
          .header-image{
            min-height: 250px;
            max-height: 250px;
          }
          .content-container{
            padding: 20px;
            .description, .contact{
              margin-left: 0;
            }
            .description{
              padding-right: 10px;
              padding-left: 10px;
            }
            .contact{
              width: 38%;
              padding: 10px;
            }
          }
        }
      }
    }
  }
  .exit-popup-btn-mobile{
    display: block;
    padding: 15px 25px;
  }
}
/* ... */

